# edepViewer

./: CMakeLists.txt  LICENSE  README.md  setup.sh  setup_all.sh
app/: CMakeLists.txt  CmdLine.cpp  Controller.cpp  Controller.h  EvdWindow.cpp  EvdWindow.h  FileChoose.cpp  FileChoose.h  GLFWApp.cpp  Source.cpp  Source.h  Window.cpp  Window.h  YAMLConfig.cpp  YAMLConfig.h
app/states/: CMakeLists.txt  ChooseFile.cpp  Disable.cpp  FirstEvent.cpp  FirstEvent.h  Goto.cpp  Goto.h  NewFile.cpp  NewFile.h  NonSequential.cpp  NonSequential.h  Reload.cpp  Reload.h  Running.cpp  Running.h  State.cpp  State.h  TryLoadNextEvent.cpp  TryLoadNextEvent.h
config/: CMakeLists.txt  config.xml  config.yaml  default.xml  default.yaml
controller/: EvdWindow.cpp  EvdWindow.h  EventController.cpp  EventController.h  GLViewer.h  Viewer.h
gl/: CMakeLists.txt  ColRecord.cpp  PuglArea.cpp  PuglArea.h  Scene.cpp  Scene.h  SceneConfig.cpp  TreeModel.cpp  TreeModel.h  UserCut.cpp  UserCut.h  Viewer.cpp  Viewer.h  VisID.cpp  VisID.h
gl/camera/: CMakeLists.txt  Camera.cpp  Camera.h  FPSCam.cpp  FPSCam.h  GLCameraArea.cpp  OrthoCamera.cpp  OrthoCamera.h  PerspCamera.cpp  PerspCamera.h  PlaneCam.cpp  PlaneCam.h  Vec3Entry.cpp  Vec3Entry.h
gl/metadata/: CMakeLists.txt  Column.cpp  Data.cpp  Row.cpp  Row.h  TreeNode.cpp
gl/model/: CMakeLists.txt  Drawable.cpp  Drawable.h  Grid.cpp  Grid.h  Noop.cpp  Noop.h  Path.cpp  Path.h  Placed.cpp  Point.cpp  Point.h  PolyMesh.cpp  PolyMesh.h  ResourceBlock.cpp  ResourceBlock.h  ShaderProg.cpp  ShaderProg.h  VAO.cpp  VAO.h
gl/objects/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  ShaderProg.cpp  Texture2D.cpp  VAO.cpp  VAO.h  enumToType.h
gl/scene/: CMakeLists.txt  HistogramWindow.cpp  HistogramWindow.h  SceneController.cpp  SceneController.h  SceneModel.cpp
gl/selection/: CMakeLists.txt  ParseTest.cpp  UserCut.cpp  UserCut.h  VisID.cpp
gl/shaders/: CMakeLists.txt  HUD.vert  camera.vert  colorPerVertex.frag  colorPerVertex.vert  selection.frag  triangleBorder.geom  userColor.frag  wideLine.geom  widePoint.geom
glad/include/glad/: glad.h
glad/src/: glad.c
gtk/: CMakeLists.txt  CmdLine.cpp  EvdApp.cpp  EvdApp.h  EvdDraw.cpp  EvdWindow.cpp  EvdWindow.h  FileChoose.h  GLFWApp.cpp  GeoDisp.cpp  GeoDispWindow.cpp  GeoDispWindow.h  GeoDraw.cpp  GeoDrawWindow.cpp  GeoDrawWindow.h  GeoDrawer.cpp  LegendView.cpp  LegendView.h  Palette.cpp  RunEvdApp.cpp  Source.cpp  Source.h
imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp
model/: Accessor.cpp  Accessor.h  EDepSimModel.h
plugins/: CMakeLists.txt  Factory.cpp
plugins/drawing/: CMakeLists.txt  Controller.cpp  DefaultGeo.cpp  DefaultGeo.h  Drawer.cpp  EDepContributor.cpp  EDepContributor.h  EDepDEdx.cpp  EDepDEdx.h  EventDrawer.cpp  FiducialDrawer.cpp  ForceDependencyOnLibraries.h  GeoDrawer.cpp  GeoDrawer.h  Grids.cpp  Grids.h  Guides.cpp  Guides.h  LinearTraj.cpp  LinearTraj.h  Services.cpp  TrajPts.cpp  TrajPts.h  VertexCamera.cpp  VertexCamera.h
plugins/drawing/camera/: CMakeLists.txt  CameraConfig.cpp  VertexCamera.cpp  VertexCamera.h
plugins/drawing/event/: CMakeLists.txt  EDepContributor.cpp  EDepContributor.h  EDepDEdx.cpp  EDepDEdx.h  EventController.cpp  EventDrawer.cpp  LinearTraj.cpp  LinearTraj.h  TrajPts.cpp  TrajPts.h
plugins/drawing/geometry/: CMakeLists.txt  DefaultGeo.cpp  DefaultGeo.h  GeoController.cpp  Grids.cpp  Grids.h
pugl/: CMakeLists.txt
pugl/pugl/: pugl_osx.m  pugl_win.cpp  pugl_x11.c
util/: CMakeLists.txt  ColorIter.cxx  GenException.cpp  GenException.h  Geometry.cpp  PDGToColor.cpp  PDGToColor.h
view/gl/: GLScene.cpp  GLScene.h
view/gl/model/: Drawable.cpp  Drawable.h  PolyMesh.cpp  PolyMesh.h  ShaderProg.cpp  ShaderProg.h
view/gl/shaders/: camera.frag
view/gtk/: EvdWindow.cpp  EvdWindow.h  Viewer.h
